# microbit_rust_tutorial

./: .gitignore  Cargo.toml  Embed.toml  Makefile  README.md
.cargo/: config.toml
src/: main.rs
